[gd_scene load_steps=2 format=3 uid="uid://bxhgfypwv8xkq"]

[ext_resource type="Script" path="res://scripts/AchievementScreen.gd" id="1_achievement"]

[node name="AchievementScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_achievement")

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
modulate = Color(1, 1, 1, 0.95)

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="HeaderContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "üèÜ ACHIEVEMENTS"

[node name="ProgressLabel" type="Label" parent="Panel/VBoxContainer/HeaderContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Progress: 0/10 (0%)"
horizontal_alignment = 2

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="CategoryContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AchievementList" type="VBoxContainer" parent="Panel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BackButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
custom_minimum_size = Vector2(100, 40)
theme_override_font_sizes/font_size = 18
text = "BACK"